<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableLayout" >

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomEvento" />

            <EditText
                android:id="@+id/edtNomEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="13"/>
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desEvento" />

            <EditText
                android:id="@+id/edtDesEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="13"/>
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <ImageButton
                android:id="@+id/imbFecha"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_event"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/edtFechaEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="13"/>
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <ImageButton
                android:id="@+id/imbHora"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_timer"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/edtHoraEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="13"/>
        </TableRow>
        <Button
            android:id="@+id/btnAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiquetaContact"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btnSaveEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etiquetaGuardar"
            android:textColor="@android:color/white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </TableLayout>


    <ListView
        android:id="@+id/listContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/tableLayout"
        android:layout_alignParentEnd="true" />



</RelativeLayout>